trunk/Archive/f3a99208d2a49a1c1efdf9d087cc7655-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:20:47: warning: multi-character character constant [-Wmultichar]
             txt = txt.Insert(txt.Length - 1, ('ยง' - 'w').ToString());
                                               ^
main.cpp:21:21: warning: multi-character character constant [-Wmultichar]
             txt += ('ยง' - 0x25a6 / Param + vC).ToString(fmt) + ((char)0xb0).ToString();
                     ^
main.cpp:1:2: error: expected unqualified-id before 'public'
  public String GetInfo(Int32 Param)
  ^
